@@ -1,3 +1,8 @@
+2006-06-13  Roland McGrath  <roland@redhat.com>
+
+	* elf-from-memory.c (elf_from_remote_memory): Fix 32/64 typo.
+	Use __libdwfl_seterrno for elf_memory failure.
+
 2006-05-27  Ulrich Drepper  <drepper@redhat.com>
 
 	* libdwfl.h: Add extern "C".
